Add a reference (just testing)

--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -3,3 +3,4 @@
 
 Describe the current state of reproducible computational science, and
 in particular recomputation.org.
+\cite{gent:recomputation}
