--- a/SummerSchoolPaper/ack.tex
+++ b/SummerSchoolPaper/ack.tex
@@ -1,4 +1,4 @@
 \section*{Acknowledgements}
 \label{s:ack}
 
-Thank SICSA/EPSRC/speakers/participants!
+Thank SICSA/SSI/Microsoft Research/EPSRC/speakers/participants!
