Some thoughts for obstacles.

--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -3,3 +3,26 @@
 
 Describe the obstacles that we have discovered; basically a
 description of all the talks and a distillation of the challenges.
+
+Obstacles and Challenges (perhaps a table showing which case studies
+are revealing them):
+
+- Technical:
+ 
+  * Long-term persistence
+  * In some areas it's harder to create reproducible experiments than in others
+
+- Legal and ethical:
+  * Data protection issues: personal data drifting into VMs
+  * Licensing issues
+
+- Community building:
+
+  * why to make your research reproducible
+  * how to motivate your colleagues/collaborators/supervisors/etc
+  
+
+
+
+
+
