Added Author info

--- a/SummerSchoolPaper/group1.tex
+++ b/SummerSchoolPaper/group1.tex
@@ -1,5 +1,14 @@
 \title{Case study \#1: Ethical requirements for recomputation}
 \author{
+	Benjamin M. Gorman \\
+               School of Computing\
+        University of Dundee\\
+        Dundee DD1 4HN, \underline{Scotland}
+	b.gorman@dundee.ac.uk
+	Luke Hutton \\
+		School of Computer Science\
+		University of St Andrews\\
+		St Andrews KY16 9SX, \underline{Scotland}
         Karen Petrie \\
                School of Computing\
         University of Dundee\\
