--- a/SummerSchoolPaper/group1.tex
+++ b/SummerSchoolPaper/group1.tex
@@ -1,19 +1,22 @@
 \title{Case study \#1: Ethical requirements for recomputation}
 \author{
 	Benjamin M. Gorman \\
-               School of Computing\
+               School of Computing,
         University of Dundee\\
-        Dundee DD1 4HN, \underline{Scotland}
-	b.gorman@dundee.ac.uk
+        Dundee DD1 4HN, \underline{Scotland}\\
+	b.gorman@dundee.ac.uk\\
+	\and\\
 	Luke Hutton \\
-		School of Computer Science\
+		School of Computer Science,
 		University of St Andrews\\
-		St Andrews KY16 9SX, \underline{Scotland}
+		St Andrews KY16 9SX, \underline{Scotland}\\
+	lh49@st-andrews.ac.uk	
+	\and\\
         Karen Petrie \\
-               School of Computing\
-        University of Dundee\\
-        Dundee DD1 4HN, \underline{Scotland}
-            \and
+               School of Computing,
+        	      University of Dundee\\
+        Dundee DD1 4HN, \underline{Scotland}\\
+        kpetrie@dundee.ac.uk 
        %add yourself here! 
 }
 \date{\today}
@@ -26,7 +29,7 @@
 \section{Introduction}
 The goal of recomputation\footnote{http://www.recomputation.org/} is to follow the recompilation manifesto\footnote{http://www.recomputation.org/blog/2013/04/12/the-recomputation-manifesto/} and make computational experiments recomputable by providing tools and a repository to store experiments in. The mission is stated as:
 \begin{quote}
-If we can compute your experiment now, anyone can recompute it 20 years from now
+``If we can compute your experiment now, anyone can recompute it 20 years from now''
 \end{quote}
 
 One of the considerations perhaps under considered in regards to recomputation to date is the ethical implications. 
