--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -7,22 +7,43 @@ description of all the talks and a distillation of the challenges.
 Obstacles and Challenges (perhaps a table showing which case studies
 are revealing them):
 
-- Technical:
- 
-  * Long-term persistence
-  * In some areas it's harder to create reproducible experiments than in others
+\begin{itemize}
+\item Technical:
+ \begin{itemize}
+  \item Long-term persistence
+  \item In some areas it's harder to create reproducible experiments than in others
+\end{itemize}
 
-- Legal and ethical:
-  * Data protection issues: personal data drifting into VMs
-  * Licensing issues
+\item
+Legal and ethical:
 
-- Community building:
-
-  * why to make your research reproducible
-  * how to motivate your colleagues/collaborators/supervisors/etc
+\begin{itemize}
+  \item Data protection issues: personal data drifting into VMs
+  \item Licensing issues
+  \end{itemize}
   
 
+\item
+Community building:
 
+\begin{itemize}
+\item
+  why to make your research reproducible
+  \item how to motivate your colleagues/collaborators/supervisors/etc
+  \end{itemize}
+\item From Discussion
+\begin{itemize} 
+
+\item Performance measurement
+\item ability to get ethical consent.  Did they ask to release the data in a form we can use?
+\item how much knowledge is needed to rerun an experiment
+\item Ease of reproduction vs independent reproducibility
+\item Automation tradeoff - recomputation tends to need automated systems
+\item You don't know what data was decided not to publish in the paper 
+  \end{itemize}
+
+  
+\end{itemize}
 
 
 
