--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -11,16 +11,18 @@ sciences.
 
 The programme included:
 
-    Steve Crouch (Software Sustainability Institute): Developing Sustainable Research Software – why is it important and what resources are out there?
-    Ian Gent (St Andrews): Reproducibility in Computer Science
-    Tristan Henderson (St Andrews): Data Sharing: the good, the bad and the ugly
-    Neil Chue Hong (Software Sustainability Institute), Better Software, Better Research: Why reproducibility is important for your research
-    Darren Kidney (St Andrews): Data Analysis using R
-    Alexander Konovalov (St Andrews): Using Microsoft Azure (Tutorial)
-    Lars Kotthoff (University College Cork): Recomputation
-    Miguel Nacenta (St Andrews): Experimental Methodology in HCI Research
-    Burkhard Schafer (Edinburgh): Legal Issues in Computer Science
-    Kenji Takeda (Microsoft Research Cambridge), Reproducible Research and the Cloud
+\begin{itemize}
+   \item Steve Crouch (Software Sustainability Institute): Developing Sustainable Research Software -- why is it important and what resources are out there?
+   \item Ian Gent (St Andrews): Reproducibility in Computer Science
+   \item Tristan Henderson (St Andrews): Data Sharing: the good, the bad and the ugly
+    \item Neil Chue Hong (Software Sustainability Institute), Better Software, Better Research: Why reproducibility is important for your research
+    \item Darren Kidney (St Andrews): Data Analysis using R
+    \item Alexander Konovalov (St Andrews): Using Microsoft Azure (Tutorial)
+    \item Lars Kotthoff (University College Cork): Recomputation
+    \item Miguel Nacenta (St Andrews): Experimental Methodology in HCI Research
+    \item Burkhard Schafer (Edinburgh): Legal Issues in Computer Science
+    \item Kenji Takeda (Microsoft Research Cambridge), Reproducible Research and the Cloud
+\end{itemize}
 
 For the hackday (actually split into several sessions), attendees 
 were asked to `bring a paper', i.e. to bring the suggestion of a 
