Some TODOs added.

--- a/SummerSchoolPaper/discussion.tex
+++ b/SummerSchoolPaper/discussion.tex
@@ -2,3 +2,6 @@
 \label{s:discussion}
 
 What have we learned? What recommendations can we make? What next?
+
+After presenting the case studies, in this section we could give a table indicating
+which obstacles we have met in which case studies.
