--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -4,3 +4,10 @@
 Describe the current state of reproducible computational science, and
 in particular recomputation.org.
 \cite{gent:recomputation}
+
+* Recomputation manifesto
+
+* Github, Figshare and Mozilla Science Labs initiative (assigning DOI to the code)
+
+* Training efforts like Software Carpentry addressing to various extents the "Recompuliteracy" issue
+
