--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -21,18 +21,30 @@
   
 @url{azure,
 	Howpublished = {\url{https://azure.microsoft.com/en-us/}},
-	Title = {Microsoft Azure}}
+	Title = {{Microsoft Azure}}}
   
-@article{chord1,
+@inproceedings{chord1,
   Author = {Dabek, Frank and Brunskill, Emma and Kaashoek, M. Frans and Karger, David R. and Morris, Robert and Stoica, Ion and Balakrishnan, Hari},
-	Journal = {IEEE Computer Society},
-	Pages = {81--86},
-	Title = {Building peer-to-peer systems with Chord, a distributed lookup service},
-	Year = {2001}}
+booktitle={Proceedings of the Eighth Workshop on Hot Topics in Operating Systems},
+title={Building peer-to-peer systems with {Chord}, a distributed lookup service}, 
+year={2001}, 
+month=may,
+pages={81--86}, 
+keywords={file organisation;file servers;Chord distributed lookup service;decentralized network;peer-to-peer file sharing system;peer-to-peer systems;Authentication;Computer science;Costs;Internet;Laboratories;Network servers;Peer to peer computing;Robustness;Routing;Scalability}, 
+doi={10.1109/HOTOS.2001.990065},}
   
 @inproceedings{chord2,
-  Author = {Stoica, Ion and Morris, Robert and Karger, David and Kaashoek, Frans and Balakrishnan, Hari},
-	Booktitle = {Proceedings of the 2001 ACM SIGCOMM Conference},
-	Pages = {149--160},
-	Title = {Chord: A scalable peer-to-peer lookup service for internet applications},
-	Year = {2001}}
+author = {Stoica, Ion and Morris, Robert and Karger, David and Kaashoek, M. Frans and Balakrishnan, Hari},
+ title = {Chord: A Scalable Peer-to-peer Lookup Service for Internet Applications},
+ booktitle = {Proceedings of the 2001 Conference on Applications, Technologies, Architectures, and Protocols for Computer Communications},
+ year = {2001},
+ isbn = {1-58113-411-8},
+ location = {San Diego, CA, USA},
+ pages = {149--160},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/383059.383071},
+ doi = {10.1145/383059.383071},
+ acmid = {383071},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
