list of speakers

--- a/SummerSchoolPaper/school.tex
+++ b/SummerSchoolPaper/school.tex
@@ -1,4 +1,27 @@
 \section{The EMCSR summer school}
 \label{s:school}
 
-Describe the summer school.
+The summer school comprised two activities: a set of speakers
+describing ongoing developments and challenges in reproducible
+research, and a set of projects chosen by participants to address some
+of these outstanding challenges.
+
+Ian Gent and Lars Kotthoff: challenges in recomputation.
+
+Kenji Takeda: how cloud computing can enable recomputable and
+reproducible experiments.
+
+Neil Chue Hong and Steve Crouch: the role of sustainable research
+software in reproducible computational experiments.
+
+Darren Kidney: using standard statistical tools such as R and Sweave
+to create recomputable papers.
+
+Tristan Henderson: the role and challenges of data sharing in
+reproducible research.
+
+Burkhard Schafer: legal issues in reproducible research: licensing,
+copyright, data protection, \ldots
+
+Miguel Nacenta: reproducibility in HCI experiments.
+
