--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -1,11 +1,9 @@
-\section{Obstacles to recomputation}
+\section{Obstacles to Reproducibility in Computational Sciences}
 \label{s:obstacles}
 
-Describe the obstacles that we have discovered; basically a
-description of all the talks and a distillation of the challenges.
+There are many obstacles to reproducibility.   Several of these were discussed by various speakers during the week.  They were also discussed by the participants.
 
-Obstacles and Challenges (perhaps a table showing which case studies
-are revealing them):
+Amongst the obstances and challenges that we identified are the following (although not intended to be an exhaustive list.) 
 
 \begin{itemize}
 \item Technical:
