--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -48,3 +48,11 @@ author = {Stoica, Ion and Morris, Robert and Karger, David and Kaashoek, M. Fran
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
+
+@inproceedings{danielpaper,
+  Author = {Reijsbergen, Dani\"el and Gilmore, Stephen},
+	Title = {Formal punctuality analysis of frequent bus
+services using headway data},
+booktitle={Proceedings of the Eleventh European Workshop on Performance Engineering (EPEW 2014)},
+  Year = {2014},
+	}
