starting to flesh out ethics results|

--- a/SummerSchoolPaper/group1.tex
+++ b/SummerSchoolPaper/group1.tex
@@ -37,6 +37,25 @@ One of the considerations perhaps under considered in regards to recomputation t
 
 \section{Comparison of Ethical Requirements across Universities}
 
+Through examination of ethics submissions from ten institutions across the UK, EU, and US,
+we aim to discover a set of ethical concerns common to all. 
+Our analysis uncovered 182 unique fields, 
+encompassing generic details, such as contact details of co-investigators, methodological
+details, and institution-specific requirements, often for insurance and liability purposes.
+Of these fields, only two were common to all ten ethics forms - the name of the principal
+investigator, and whether informed consent was sought. While this is clearly insufficient
+as a minimum specification for capturing ethics requirements, it reveals the crux of the 
+ethics approval process is to ensure participant agency is preserved through the experimental process.
+
+% which fields occur frequently
+
+% thematic overlaps
+
+% surprisingly small common set
+
+% what are the outliers - are they important?
+
+
 \section{Comparison of Ethical Requirements across Publishers}
 
 \section{Framework for Ethics to accompany data and experiments}
