--- a/SummerSchoolPaper/school.tex
+++ b/SummerSchoolPaper/school.tex
@@ -6,22 +6,51 @@ describing ongoing developments and challenges in reproducible
 research, and a set of projects chosen by participants to address some
 of these outstanding challenges.
 
-Ian Gent and Lars Kotthoff: challenges in recomputation.
+Ian Gent from St Andrews and Lars Kotthoff from Cork gave
+presentations outlining the current state of the recomputation
+project, covering such issues as what it means to ``recompute'' a
+computational experiment, and the requirements for storing and
+reproducing an experiment using virtual machines.
 
-Kenji Takeda: how cloud computing can enable recomputable and
-reproducible experiments.
+Kenji Takeda from Microsoft Research delved further into the use of
+virtualisation, by describing the impact of cloud computing on
+computational research\footnote{e.g., the various projects at
+\url{http://azure4research.com/}}. As more and more research projects
+involve the use of virtual machines running on cloud infrastructure,
+it might perhaps be possible to leverage this for creating
+reproducible experiments by sharing these virtual machines.
 
-Neil Chue Hong and Steve Crouch: the role of sustainable research
-software in reproducible computational experiments.
+Two members of the Software Sustainability
+Institute\footnote{\url{http://www.software.ac.uk/}}, Neil Chue Hong
+and Steve Crouch, discussed the role of sustainable research software
+in reproducible computational experiments. While Neil focused on the
+need for reproducibility, Steve discussed how to make research
+software sustainable, by using best practices for programming, and
+indeed thinking about what ``good'' code means.
 
-Darren Kidney: using standard statistical tools such as R and Sweave
-to create recomputable papers.
+Darren Kidney from the University of St Andrews introduced the use of
+standard statistical tools such as R and SWeave to create recomputable
+papers. Indeed this paper is written using SWeave.
 
-Tristan Henderson: the role and challenges of data sharing in
-reproducible research.
+In addition to sharing code and the systems used to run an experiment,
+much reproducible research requires the sharing of research data,
+which in itself involves many challenges. Tristan Henderson from St
+Andrews discussed his experiences in running the CRAWDAD wireless
+network data archive\footnote{\url{http://crawdad.org/}}, and the
+difficulties in documenting data, convincing researchers to dedicate
+the time to share their data, citing data correctly and the privacy
+issues surrounding the sharing of sensitive data.
 
-Burkhard Schafer: legal issues in reproducible research: licensing,
-copyright, data protection, \ldots
+Sharing code, data or systems may also involve many legal issues: code
+may have particular licenses that make sharing hard or easy, data may
+be subject to data protection legislation, or indeed the law might
+suggest best practices that could make recomputable research easier to
+achieve.  Burkhard Schafer from the Edinburgh School of Law gave a set
+of presentations covering these and many other aspects of the law.
 
-Miguel Nacenta: reproducibility in HCI experiments.
-
+Not all recomputable computational experiments solely involve
+computations. Miguel Nacenta from the St Andrews Human-Computer
+Interaction (HCI) research group discussed the issues around
+reproducibility in HCI experiments that involve human participants,
+and led a session in which summer school attendees attempted to
+reproduce the analysis from an HCI research paper.
